# koshucode-stationery

koshu-regress-cmd/: LICENSE  koshu-regress-cmd.cabal  koshu-regress.hs
koshu-regress-cmd/Koshucode/Stationery/Regress/: Diff.hs  DirTree.hs  Main.hs  Para.hs  Test.hs
